--- a/style.css
+++ b/style.css
@@ -186,7 +186,9 @@ img {
   }
 }
 
-@media (min-width: 450px) {
+
+
+@media (max-width: 1024px) {
   body {
     background: linear-gradient(0deg, var(--soft-blue), var(--soft-violet))
       no-repeat;
